--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <title>Lυᴄкуxԃ</title>
+     <title>HunterX</title>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -1912,7 +1912,7 @@ var pJS = function (e, a) {
                               </div>
                          </div>
                          <h3 class="name"></h3>
-                         <h3 class="sub-name">• 𝗟𝗨𝗖𝗞𝗬 𝗫𝗗 •</h3>
+                         <h3 class="sub-name">• 𝗛𝗨𝗡𝗧𝗘𝗥𝗫 •</h3>
                     </div>
                </div>
 
@@ -1921,20 +1921,20 @@ var pJS = function (e, a) {
                          <div class="about-container">
                               <h3 class="title">About</h3>
                               <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: IDK ✦</p>
-                              <p class="text">~ Dᴇᴠ ~</p>
+                              <p class="text">~ Lᴇᴀʀɴ ~</p>
                               <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
                          </div>
                          <div class="icons-container">
-                              <a href="#" class="icon">
+                              <a href="https://github.com/hunterX-html" class="icon">
                                    <i class="fa-brands fa-github"></i>
                               </a>
                               <a href="#" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
-                              <a href="https://telegram.dog/Lvxky" class="icon">
+                              <a href="https://telegram.dog/hunterx_coder" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
-                              <a href="#" class="icon">
+                              <a href="www.youtube.com/@HUNTERX-HTML" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
                          </div>
@@ -1943,7 +1943,7 @@ var pJS = function (e, a) {
                                    <a href="#" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/Lvxky" class="share">Contact</a>
+                                   <a href="https://telegram.dog/hunterx_coder" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
