--- a/index.html
+++ b/index.html
@@ -1934,7 +1934,7 @@ var pJS = function (e, a) {
                               <a href="https://telegram.dog/hunterx_coder" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
-                              <a href="www.youtube.com/@HUNTERX-HTML" class="icon">
+                              <a href="https://youtube.com/@HUNTERX-HTML" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
                          </div>
